// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui/shared/select/MultiSelectFilter Custom Option Et Selection 1`] = `
<button
  aria-expanded={false}
  aria-label="ouvrir le menu"
  className="flex items-center w-full p-2 text-left text-sm"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onPointerDown={[Function]}
  type="button"
>
  <span
    className="fr-fi-filter-fill fr-fi--sm w-full text-center text-bf500 font-bold"
  >
     Custom open button
  </span>
  <span
    className="ri-arrow-down-s-line font-normal text-center h-6 w-6 text-[1.5rem] leading-[1.5rem] flex mt-1 ml-auto"
  />
</button>
`;

exports[`Storyshots ui/shared/select/MultiSelectFilter Default 1`] = `
<button
  aria-expanded={false}
  aria-label="ouvrir le menu"
  className="flex items-center w-full p-2 text-left text-sm"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onPointerDown={[Function]}
  type="button"
>
  <span
    className="mr-auto flex line-clamp-1"
  >
    <span>
      Tous
    </span>
  </span>
  <span
    className="ri-arrow-down-s-line font-normal text-center h-6 w-6 text-[1.5rem] leading-[1.5rem] flex mt-1 ml-auto"
  />
</button>
`;
